--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,18 @@
   </head>
 
   <body>
-    <h1 class="app-title">Country Handbook</h1>
+    <div class="header">
+      <h1 class="app-title">Country Handbook</h1>
 
-    <div class="input-group flex-nowrap col-md-4">
-      <input
-        type="text"
-        class="form-control js-search-form"
-        placeholder="enter country"
-        aria-label="enter country"
-        aria-describedby="addon-wrapping"
-      />
+      <div class="input-group flex-nowrap col-md-4">
+        <input
+          type="text"
+          class="form-control js-search-form"
+          placeholder="enter country"
+          aria-label="enter country"
+          aria-describedby="addon-wrapping"
+        />
+      </div>
     </div>
     <div class="country-container"></div>
   </body>
