--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Indie+Flower&family=Muli:wght@300;500&family=Ramabhadra&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
